# dsentr-backend

./: .env  Cargo.toml
migrations/: init.sql
src/: config.rs  main.rs  responses.rs  state.rs
src/db/: mock_db.rs  mod.rs  postgres_user_repository.rs  user_repository.rs
src/models/: mod.rs  signup.rs  user.rs
src/routes/: dashboard.rs  early_access.rs  mod.rs
src/routes/auth/: claims.rs  forgot_password.rs  github_login.rs  google_login.rs  login.rs  logout.rs  mod.rs  reset_password.rs  session.rs  signup.rs  verify.rs
src/services/: mod.rs
src/services/oauth/github/: mock_github_oauth.rs
src/services/oauth/google/: mock_google_oauth.rs
src/services/smtp_mailer/: mock_mailer.rs  mod.rs  smtp_mailer.rs
src/utils/: csrf.rs  email.rs  jwt.rs  mod.rs  password.rs
