[package]
name = "dsentr-backend"
version = "0.1.0"
edition = "2021"  # 👈 reverting to "2021" for now - most crates aren't tested on 2024 yet

[dependencies]
axum = { version = "0.6", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"  # update to match sqlx and tracing ecosystem
tower-http = { version = "0.5", features = ["cors"] }
http = "1"
