[package]
name = "dsentr-backend"
version = "0.1.0"
edition = "2021"  # 👈 reverting to "2021" for now - most crates aren't tested on 2024 yet

[dependencies]
async-trait = "0.1"
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
tower = "0.4"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "uuid", "postgres", "time", "chrono", "derive" ] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"  # update to match sqlx and tracing ecosystem
tower-http = { version = "0.6.4", features = ["cors"] }
http = "0.2"
argon2 = "0.5"
password-hash = "0.5"
rand_core = "0.6"
jsonwebtoken = "9"
chrono = "0.4"
rand = "0.9.1"
uuid = { version = "1.16.0", features = ["serde"] }
time = "0.3.41"
lettre = { version = "0.11", default-features = false, features = [
  "builder",
  "smtp-transport",
  "tokio1-rustls",
  "rustls-native-certs",
  "ring"
] }
lettre_email = "0.9.4" # if using simple email formatting (optional)
rustls = "0.21"
tokio-rustls = "0.25"
axum-server = { version = "0.6", optional = true, features = ["tls-rustls"] }

[features]
default = []
tls = ["axum-server/tls-rustls"]
